kubernetesnew/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courier-ingress2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "courier-management"
    http:
      paths:
      - pathType: Prefix
        path: "/temp/(.*)"
        backend:
          service:
            name: react
            port:
              number: 80
