kubernetesnew/ingressSpringBoot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courier-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "springboot.com"
    http:
      paths:
      - pathType: Prefix
        path: "/api/(.*)"
        backend:
          service:
            name: springboot
            port: 
              number: 9090
  # - host: "courier-management"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/temp/(.*)"
  #       backend:
  #         service:
  #           name: react
  #           port:
  #             number: 80
